[project]
name = "sumer-llm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Hashem Alsaket", email = "hashem.alsaket@sumersports.com" },
    { name = "Jorge Lopez Johnson", email = "jorge.lopez-johnson@sumersports.com" },
    { name = "Ben Swanson", email = "ben.swanson@sumersports.com" }
]
dependencies = [
    "boto3",
    "flask",
    "gunicorn",
    "pandas",
    "pyyaml",
    "requests",
    "sqlalchemy",
    "duckdb>=1.1.3",
    "polars[all]>=1.13.0",
    "psycopg2>=2.9.10",
    "langchain>=0.3.7",
    "langchain-community>=0.3.7",
    "langchain-aws>=0.2.7",
    "bs4>=0.0.2",
    "qdrant-client>=1.12.1",
    "transformers>=4.46.3",
    "torch>=2.5.1",
    "sentence-transformers>=3.3.1",
    "python-json-logger>=2.0.7",
    "langfuse>=2.57.10",
    "fastapi>=0.115.11",
    "uvicorn>=0.34.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "jupyter>=1.1.1",
    "doppler-env>=0.3.1",
]

[tool.rye.workspace]
members = ["chatbot", "seed"]

[tool.rye.scripts]
db-seed = 'python -m seed.player_data'
db-seed-local = 'doppler run -- python -m seed.player_data'
prompt-chatbot = 'python -m chatbot.test_run'
server-launch = 'litellm --config litellm-config.yaml'
shame = 'doppler run -- python -m scripts.gen_shame'
